--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" defer></script>
+    <script src="/scripts/script.js" defer></script>
     <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>Contador Cumpleaños</title>
 </head>
