Créditos a las imágenes y finalización de proyecto

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js" defer></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <script src="/script.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+
     <title>Contador Cumpleaños</title>
 </head>
 <body>
+    <div class="todoTexto">
     <h1>Mi Cumpleaños en:</h1>
-
     <div class="countdownDiv">
         <div>
             <h3>Días</h3>
@@ -28,8 +29,10 @@
             <p id="seconds">0</p>
         </div>
     </div>
-    <div>
-        <img src="img/birthday.jpg" id="birthdayImage" class="noColorImage">
+</div>
+    <div id="felizCumpleanhos" class="noColorImage">
+        <h1>¡Felicidades!</h1>
+        <img src="img/birthday2.jpg" id="birthdayImage">
     </div>
 </body>
 </html>
