--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="./script.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 
     <title>Contador Cumpleaños</title>
 </head>
@@ -32,7 +32,7 @@
 </div>
     <div id="felizCumpleanhos" class="noColorImage">
         <h1>¡Felicidades!</h1>
-        <img src="img/birthday2.jpg" id="birthdayImage">
+        <img src="./img/birthday2.jpg" id="birthdayImage">
     </div>
 </body>
 </html>
